--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "riyadh-intelligence",
+  "name": "riyadh-map",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@turf/turf": "^6.5.0",
-    "mapbox-gl": "^2.15.0",
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "react-map-gl": "^7.1.6"
+    "mapbox-gl": "^3.1.2",
+    "next": "14.1.0",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.24",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18"
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
