--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "riyadh-map",
+  "name": "riyadh-platform",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "mapbox-gl": "^3.1.2",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
+    "react-dom": "^18",
+    "mapbox-gl": "^3.1.2",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
